Correct the alignment of the first section.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,6 +44,7 @@
     display: flex;
     align-items: center;
     margin-top: 50px;
+    justify-content: center;
 }
 
 .container1 {
@@ -161,9 +162,6 @@
     height: 60px;
 }
 
-.submaster6 {
-   
-}
 
 .buttons {
     color: white;
